--- a/dashboard/src/App.css
+++ b/dashboard/src/App.css
@@ -1,7 +1,7 @@
 .App {
   background-color: #2e2e2e;
   width: 100%;
-  height: 100vh;
+  height: 100%;
   }
 
 header {
@@ -33,27 +33,19 @@ opacity: 87%;
 
 
 .Sidebar {
-height: 100vh;
+
 width: 10%;
 background-color: black;
 color: white; 
 
-
-
 }
-
 
 .container {
   display: flex;
   flex: 1;
   height: 100%;
-
 overflow: hidden;
-
-
-
-
-  
+ 
 }
 
 .main-content {
